# unc-dining-app

./: .gitignore  README.md  app.py  docker-compose.yml
backend/: .env.example  index.js  package-lock.json  package.json  setup.sql
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js  setupProxy.js
frontend/src/components/: AboutUs.jsx  App.jsx  Dashboard.jsx  Homepage.jsx  UserPreferencesForm.jsx
python-service/: .env.example  requirements.txt
python-service/recommendation/: README.md  pyproject.toml
python-service/recommendation/src/recommendation/: crew.py  crews.py  main.py
static/: styles.css
template/: index.html  results.html
