[project]
name = "recommendation"
version = "0.1.0"
description = "recommendation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
recommendation = "recommendation.main:run"
run_crew = "recommendation.main:run"
train = "recommendation.main:train"
replay = "recommendation.main:replay"
test = "recommendation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
